# package-python-tinybird-interview

./: .gitignore  README.md  pyproject.toml
src/taxi_filter/: __init__.py  cli.py  processor.py
tests/: test_processor.py
