[project]
name = "taxi-filter"
version = "0.1.0"
description = "Filter NYC Yellow Taxi trips above the 90th percentile in trip distance"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.scripts]
taxi-filter = "taxi_filter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taxi_filter"]
